midterm/postgres/postgres.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres
  labels:
    app: midterm-app
    role: database
spec:
  volumes:
    - name: pgdata
      emptyDir: {}  

  securityContext:
    fsGroup: 999
    seccompProfile:
      type: RuntimeDefault

  containers:
    - name: database
      image: postgres:16-alpine
      ports:
        - containerPort: 5432
      volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data

      securityContext:
        runAsUser: 999
        runAsGroup: 999
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: false

      readinessProbe:
        exec:
          command:
          - pg_isready
          - -U
          - postgres
          - -h
          - localhost
          - -p
          - "5432"
        initialDelaySeconds: 15          # give initdb time
        periodSeconds: 10
        timeoutSeconds: 3
        failureThreshold: 6

      livenessProbe:
        exec:
          command:
          - pg_isready
          - -U
          - postgres
          - -h
          - localhost
          - -p
          - "5432"
        initialDelaySeconds: 60          # be more patient — Postgres can take time to recover
        periodSeconds: 30
        timeoutSeconds: 5
        failureThreshold: 6     

      resources:
        requests:
          memory: "256Mi"
          cpu: "250m"
        limits:
          memory: "512Mi"
          cpu: "500m"
