midterm/postgres/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: midterm-app
    role: database
  ports:
  - port: 5432
    targetPort: 5432
