midterm/postgres/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: database-network-policy
spec:
  podSelector:
    matchLabels:
      app: midterm-app
      role: database
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: midterm-app
          role: backend
    - podSelector:
        matchLabels:
          app: midterm-app
          role: migration
    ports:
    - protocol: TCP
      port: 5432
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: midterm-app
          role: backend
    ports:
    - protocol: TCP
      port: 5432
  - to:
    - podSelector:
        matchLabels:
          app: midterm-app
          role: migration
    ports:
    - protocol: TCP
      port: 5432
